# libwibble

./: CMakeLists.txt  Makefile.am  Makefile.in  README  TODO  aclocal.m4  config.h  configure  configure.ac  extract_syms.sh  fix-perms  libwibble-dev.spec  pull-mornfall  wibble.spec
debian/: changelog  control  copyright  rules
debian/patches/: gcc43.diff
doc/: CMakeLists.txt  libept.dox.in  wibble.dox.in
otb/: otb-build  otb-configure  otb-run  otb-setup
wibble/: CMakeLists.txt  Makefile.in  string.cpp  string.h  test-main.h
wibble/commandline/: options.cpp
wibble/net/: http.cpp
wibble/sys/: childprocess.cpp  fs.cpp  mutex.h  mutex.h-darcs-backup0  process.cpp
wibble/tests/: CMakeLists.txt  test_buffer.cpp  test_netbuffer.cpp  test_text_wordwrap.cpp
